Changed the form of the -s schema.xml to convert to a URL without a malformedURL exception.